# wala-predictions

./: .gitignore  Anchor.toml  index.html  netlify.toml  package-lock.json  package.json  posicoes.html  server.mjs  vite.config.js
netlify/functions/: football-data.js  keeper.mjs
programs/wala_predicts/: Cargo.toml
programs/wala_predicts/src/: lib.rs
scripts/: keeper-resolve.js
src/: main.js  posicoes.css  posicoes.js  style.css
src/idl/: wala_predicts.json
